--- a/components.json
+++ b/components.json
@@ -13,9 +13,9 @@
   "aliases": {
     "components": "@/shared/components",
     "utils": "@/shared/lib/utils",
-    "ui": "src/shared/components/ui",
+    "ui": "@/shared/components/ui",
     "lib": "@/shared/lib",
-    "hooks": "src/shared/hooks"
+    "hooks": "@/shared/hooks"
   },
   "iconLibrary": "lucide"
 }
